[gd_scene load_steps=30 format=3 uid="uid://clyxhwdcfskig"]

[ext_resource type="Script" path="res://Scripts/inimigo.gd" id="1_gujwf"]
[ext_resource type="Shader" path="res://Shaders/blink.gdshader" id="2_bgqlm"]
[ext_resource type="Texture2D" uid="uid://d3g35evbx6mpb" path="res://Assets/enemys/enemy_die.png" id="2_rs11e"]
[ext_resource type="Texture2D" uid="uid://dxkpkt7ymnow0" path="res://Assets/enemys/enemy_idle.png" id="3_mxp4r"]
[ext_resource type="Texture2D" uid="uid://c877tf8q3j71v" path="res://Assets/enemys/enemy_dead.png" id="4_nt8dj"]
[ext_resource type="Texture2D" uid="uid://bwx0lyn6tf2ux" path="res://Assets/enemys/enemy_walk.png" id="5_ibot6"]
[ext_resource type="PackedScene" uid="uid://bsc465m5wra2p" path="res://Scenes/grade_enemy.tscn" id="6_wimkt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4qq4x"]
shader = ExtResource("2_bgqlm")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tjfac"]
atlas = ExtResource("2_rs11e")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y7ms"]
atlas = ExtResource("2_rs11e")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajyll"]
atlas = ExtResource("2_rs11e")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_janyn"]
atlas = ExtResource("3_mxp4r")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwpvq"]
atlas = ExtResource("3_mxp4r")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5x58"]
atlas = ExtResource("4_nt8dj")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c67fj"]
atlas = ExtResource("4_nt8dj")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trix2"]
atlas = ExtResource("4_nt8dj")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgr07"]
atlas = ExtResource("4_nt8dj")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvtmw"]
atlas = ExtResource("4_nt8dj")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1w4x"]
atlas = ExtResource("4_nt8dj")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_akvgy"]
atlas = ExtResource("5_ibot6")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl0q3"]
atlas = ExtResource("5_ibot6")
region = Rect2(16, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2qbeu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjfac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y7ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajyll")
}],
"loop": true,
"name": &"caindo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_janyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwpvq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5x58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c67fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trix2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgr07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvtmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1w4x")
}],
"loop": true,
"name": &"reprovado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_akvgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl0q3")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e8jc7"]
radius = 8.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n70ir"]
radius = 7.0
height = 28.0

[sub_resource type="Animation" id="Animation_el24n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/blink_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/blink_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y1gyr"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/blink_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/blink_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qo8fm"]
resource_name = "up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/blink_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/blink_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2r4e"]
_data = {
"RESET": SubResource("Animation_el24n"),
"hit": SubResource("Animation_y1gyr"),
"up": SubResource("Animation_qo8fm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6nt1"]
size = Vector2(102.5, 73.5)

[node name="Inimigo_corajoso" type="CharacterBody2D" node_paths=PackedStringArray("grade_node")]
collision_layer = 4
script = ExtResource("1_gujwf")
grade_node = NodePath("GradeEnemy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4qq4x")
sprite_frames = SubResource("SpriteFrames_2qbeu")
animation = &"walk"
autoplay = "idle"

[node name="FÃ­sica" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_e8jc7")

[node name="Dano" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dano"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_n70ir")

[node name="GradeEnemy" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("6_wimkt")]
position = Vector2(0, -27)
enemy = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d2r4e")
}

[node name="area_de_stress" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_de_stress"]
shape = SubResource("RectangleShape2D_n6nt1")

[connection signal="body_entered" from="Dano" to="." method="_on_dano_body_entered"]
[connection signal="body_exited" from="Dano" to="." method="_on_dano_body_exited"]
[connection signal="body_entered" from="area_de_stress" to="." method="_on_area_de_stress_body_entered"]
[connection signal="body_exited" from="area_de_stress" to="." method="_on_area_de_stress_body_exited"]
